--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <br>
                     <br>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://linkedin/in/sama-e-shan"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://linkedin.com/in/sama-e-shan"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/samaeen"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://facebook.com/ses.shoummo"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/samaeen_art/"><i class="fab fa-instagram"></i></a>
