--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                 <span class="fa-li"><i class="fas fa-cube"></i></span>
-                                     Organized different seminars on research and
+                                     Organized different seminars for research and different organizational activiteis.
                                 </li>
                             </ul>
                         </div>
