--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                 <span class="fa-li"><i class="fas fa-cube"></i></span>
-                                     Organized different seminars for research and different organizational activiteis.
+                                     Organized different seminars for research and different organizational activities.
                                 </li>
                             </ul>
                         </div>
@@ -418,7 +418,7 @@
                             <div class="subheading">roar.media</div>
                             <ul class="fa-ul mb-0">
                                 <li>
-                                <span class="fa-li"><i class="fas fa-cube"></i></span> ,m
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
                                     Wrote and edited science based articles
                                 </li>
                             </ul>
