--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="flex-grow-1">
                             <h4 class="mb-0">Chittagong University of Engineering and Technology</h4>
                             <div class="subheading mb-3">BSc in Mechanical Engineering</div>
-                            <p>CGPA:2.98</p>
+                            <p>CGPA:2.98 (63.60%)</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2014-2019</span></div>
                     </div>
