--- a/index.html
+++ b/index.html
@@ -425,10 +425,16 @@
             <section class="resume-section" id="blog">
                 <div class="resume-section-content">
                     <h3 class="mb-2">Blog and Stories</h3>
-                    <div class="subheading"><a href="https://medium.com/@sama.shoummo">Randoms </a></div>
-                    <div id="medium-widget"></div>
-                        <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-                        <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/@sama.shoummo","postsPerLine":2,"limit":8,"picture":"small","fields":["description","author","claps","publishAt"],"ratio":"square"}})</script>
+                    <div class="subheading"><a href="https://sama-shoummo.medium.com/">Randoms </a></div>
+                    <div id="retainable-rss-embed" 
+                        data-rss="https://medium.com/feed/retainable,
+                        https://medium.com/feed/vue-mastery"
+                        data-maxcols="3" 
+                        data-layout="grid" 
+                        data-poststyle="inline" 
+                        data-readmore="Read the rest" 
+                        data-buttonclass="btn btn-primary" 
+                        data-offset="-100"></div><script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
                     <div class="subheading">Roar Article<a href="https://roar.media/bangla/main/science/biomimicry">(link)</a></div>
 
                 </div>
