--- a/index.html
+++ b/index.html
@@ -426,17 +426,10 @@
                 <div class="resume-section-content">
                     <h3 class="mb-2">Blog and Stories</h3>
                     <div class="subheading"><a href="https://sama-shoummo.medium.com/">Randoms </a></div>
-                    <div id="retainable-rss-embed" 
-                        data-rss="https://medium.com/feed/retainable,
-                        https://medium.com/feed/vue-mastery"
-                        data-maxcols="3" 
-                        data-layout="grid" 
-                        data-poststyle="inline" 
-                        data-readmore="Read the rest" 
-                        data-buttonclass="btn btn-primary" 
-                        data-offset="-100"></div><script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
-                    <div class="subheading">Roar Article<a href="https://roar.media/bangla/main/science/biomimicry">(link)</a></div>
-
+                    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://sama-shoummo.medium.com/a-short-philosophy-for-the-miserable-existence-c942cb28a403" data-iframely-url="//cdn.iframe.ly/6ovS1os?iframe=card-small"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+                    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://sama-shoummo.medium.com/technologies-that-governments-need-to-integrate-now-412c1da79c9a" data-iframely-url="//cdn.iframe.ly/D2VIL0b?iframe=card-small"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+                    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://sama-shoummo.medium.com/story-of-a-cursed-generation-4d6cadc67308" data-iframely-url="//cdn.iframe.ly/GzhhbHt?iframe=card-small"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+                    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://sama-shoummo.medium.com/religion-belief-or-disbelief-30c24a3397ac" data-iframely-url="//cdn.iframe.ly/OGpiRO2"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
                 </div>
             </section>
             <!-- Art-->
