--- a/index.html
+++ b/index.html
@@ -96,7 +96,41 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - June 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h4 class="mb-0">Production Executive</h4>
+                            <div class="subheading mb-0">Square Food and Beverages</div>
+                            <br>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Take necessary steps to collect daily Raw packagin materials stock,check and report accordingly
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Check daily target,prodcution & finished goods report and take action accordingly
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span> 
+                                    Check packing material and fumigation system regularly
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Prepare monthly prdouction report of raw packing material stock
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Keep the standard quality and increase productivity
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Ensure effective utilization of manpower for smooth operation
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2021-Present</span></div>
                     </div>
                 </div>
             </section>
@@ -283,7 +317,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fa fa-object-group"></i></span>
-                            <a href="https://ieeexplore.ieee.org/abstract/document/8465617​">IoT and Computer Vision Based Driver Safety Monitoring system with risk prediction,International Conference on Computer, Communication, Chemical, Materials and Electronic Engineering(IC4ME2),2018.</a>
+                            <a href="​https://ieeexplore.ieee.org/abstract/document/8465617​">IoT and Computer Vision Based Driver Safety Monitoring system with risk prediction,International Conference on Computer, Communication, Chemical, Materials and Electronic Engineering(IC4ME2),2018.</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa fa-object-group"></i></span>
+                            <a href="​https://ieeexplore.ieee.org/document/9392401​">An Efficient Way to Recognize Faces Using Mean Embeddings,2021 International Conference on Advances in Electrical, Computing, Communication and Sustainable Technologies (ICAECT),2021</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa fa-object-group"></i></span>
