--- a/index.html
+++ b/index.html
@@ -96,7 +96,36 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2021</span></div>
+                    </div>
+                    <div class="flex-grow-1">
+                            <h4 class="mb-0">Officer (Design and Sales)</h4>
+                            <div class="subheading mb-0">Swiss Biohygienic Equipment</div>
+                            <br>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Process Piping Design (2D Routing, P&ID, 3D Routing, Isometric Drawing) in AutoCAD Plant 3D
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    PW/WFI/CS Distribution System Design for Pharmaceuticals according to ASME BPE
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span> 
+                                    Co-ordinate with design, project ,scm department to co-ordinate sales data
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Preparing BOQ, parts list and final sales and offer documents
+                                </li>
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Preparing FDS, parts list, I/O list, phase list,operation description and electrical schematic drawings for automation department
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembor 2021 - Present</span></div>
                     </div>
                 </div>
             </section>
