--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
                     <h3 class="mb-5">Education</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <h4 class="mb-0">MSc</h4>
+                            <div class="subheading mb-3">Kyung Hee University, Korea</div>
+                            <p>-</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022-Now</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
                             <h4 class="mb-0">Chittagong University of Engineering and Technology</h4>
                             <div class="subheading mb-3">BSc in Mechanical Engineering</div>
                             <p>CGPA:2.98 (63.60%)</p>
@@ -158,6 +166,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2011</span></div>
                     </div>
+                    
                 </div>
             </section>
             <hr class="m-0" />
