--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2021</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                             <h4 class="mb-0">Officer (Design and Sales)</h4>
                             <div class="subheading mb-0">Swiss Biohygienic Equipment</div>
@@ -125,7 +126,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septembor 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembor 2021 - Septembor 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -136,7 +137,7 @@
                     <h3 class="mb-5">Education</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h4 class="mb-0">MSc</h4>
+                            <h4 class="mb-0">MSc in Computer Science</h4>
                             <div class="subheading mb-3">Kyung Hee University, Korea</div>
                             <p>-</p>
                         </div>
@@ -144,8 +145,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h4 class="mb-0">Chittagong University of Engineering and Technology</h4>
-                            <div class="subheading mb-3">BSc in Mechanical Engineering</div>
+                            <h4 class="mb-0">BSc in Mechanical Engineering</h4>
+                            <div class="subheading mb-3">Chittagong University of Engineering and Technology</div>
                             <p>CGPA:2.98 (63.60%)</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2014-2019</span></div>
@@ -194,6 +195,11 @@
                         <li>
                             <span><i class="fa fa-palette" aria-hidden="true"></i></span>
                              Design software : Blender, Inkscape, Gimp ,Krita ,Sketchbook Pro ,Photoshop
+                        </li>
+                        <br>
+                        <li>
+                            <span><i class="fa fa-gamepad" aria-hidden="true"></i></span>
+                             Game Development : Unity
                         </li>
                         <br>
                     </ul>
@@ -325,7 +331,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa fa-object-group"></i></span>
-                            <a href="​https://ieeexplore.ieee.org/document/9392401​">An Efficient Way to Recognize Faces Using Mean Embeddings,2021 International Conference on Advances in Electrical, Computing, Communication and Sustainable Technologies (ICAECT),2021</a>
+                            <a href="​https://ieeexplore.ieee.org/abstract/document/9392401​">An Efficient Way to Recognize Faces Using Mean Embeddings,2021 International Conference on Advances in Electrical, Computing, Communication and Sustainable Technologies (ICAECT),2021</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa fa-object-group"></i></span>
