--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fa fa-object-group"></i></span>
+                            <a href="​https://www.dbpia.co.kr/pdf/pdfView.do?nodeId=NODE11488400​">Pneumatic Ear Shield for Haptic Mental Repose. 한국정보과학회 학술발표논문집, 1436-1438,2023.</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa fa-object-group"></i></span>
                             <a href="​https://ieeexplore.ieee.org/abstract/document/8465617​">IoT and Computer Vision Based Driver Safety Monitoring system with risk prediction,International Conference on Computer, Communication, Chemical, Materials and Electronic Engineering(IC4ME2),2018.</a>
                         </li>
                         <li>
