--- a/index.html
+++ b/index.html
@@ -126,8 +126,23 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septembor 2021 - Septembor 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - September 2022</span></div>
                     </div>
+                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                                <h4 class="mb-0">Research Assistant</h4>
+                                <div class="subheading mb-0">Haptics and Virtual Reality Lab</div>
+                                <br>
+                                <ul class="fa-ul mb-0">
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                        Working in different research projects. The main projects involved in was Virtual Twin and Safety Project.
+                                    </li>
+                                    
+                                </ul>
+                            </div>
+                            <div class="flex-shrink-0"><span class="text-primary">September 2022 - Current</span></div>
+                        </div>
                 </div>
             </section>
             <hr class="m-0" />
