--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                         <div class="flex-grow-1">
                             <h4 class="mb-0">MSc in Computer Science</h4>
                             <div class="subheading mb-3">Kyung Hee University, Korea</div>
+                            <p>CGPA:4.263 (99.50%)</p>
                             <p>-</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2022-Now</span></div>
