--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <p class="lead mb-4">I am a Mechanical Engineering graduate with hands on experience in design and project management.Worked with different embedded platforms and robotics & automation system based project.I am skilled in wide range of softwares and platforms. In my spare time I like to do different experimentation with art and interactive media.
                     </p>
-                    <button type="button" class="btn btn-info"><a href="https://drive.google.com/file/d/1xxxcGz1o5LrkExqm1ULHEsEmVDVwq0-e/view?usp=sharing">CV</a></button>
+                    <button type="button" class="btn btn-info"><a href="https://drive.google.com/file/d/1jb-dm9LIckAWA3IY9VwvPimdaXVJybwd/view?usp=sharing">CV</a></button>
                     <br>
                     <br>
                     <div class="social-icons">
@@ -100,10 +100,14 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                            <h4 class="mb-0">Officer (Design and Sales)</h4>
+                            <h4 class="mb-0">Senior Design Engineer (Head of Design Work Preparation Dept.)</h4>
                             <div class="subheading mb-0">Swiss Biohygienic Equipment</div>
                             <br>
                             <ul class="fa-ul mb-0">
+                                <li>
+                                <span class="fa-li"><i class="fas fa-cube"></i></span>
+                                    Leading a team of 4 Engineers to complete complex design and R&D based tasks
+                                </li>
                                 <li>
                                 <span class="fa-li"><i class="fas fa-cube"></i></span>
                                     Process Piping Design (2D Routing, P&ID, 3D Routing, Isometric Drawing) in AutoCAD Plant 3D
@@ -141,7 +145,7 @@
                                     
                                 </ul>
                             </div>
-                            <div class="flex-shrink-0"><span class="text-primary">September 2022 - Current</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">September 2022 - September 2024</span></div>
                         </div>
                 </div>
             </section>
@@ -157,7 +161,7 @@
                             <p>CGPA:4.263 (99.50%)</p>
                             <p>-</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2022-Now</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022-2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -216,6 +220,11 @@
                         <li>
                             <span><i class="fa fa-gamepad" aria-hidden="true"></i></span>
                              Game Development : Unity
+                        </li>
+                        <br>
+                        <li>
+                            <span><i class="fa fa-robot" aria-hidden="true"></i></span>
+                             Robotics : RoboDK, ROS
                         </li>
                         <br>
                     </ul>
